--- a/libobjc/ChangeLog
+++ b/libobjc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-10  Jan Hubicka  <jh@suse.cz>
+
+	* nil_method.c (nil_method): No longer varardic.
+
 2002-07-02  Rodney Brown  <rbrown64@csc.com.au>
 
 	* objc/encoding.h: Fix formatting.
