--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2002-09-10  David Edelsohn  <edelsohn@gnu.org>
+
+	* rs6000.c (rs6000_assemble_visibility): Protect declaration
+	inside macro.  Correct function definition typo.
+	(rs6000_xcoff_section_type_flags): New function.
+	(TARGET_SECTION_TYPE_FLAGS): Remove definition.
+	(rs6000_elf_section_type_flags): Call default_section_type_flags_1
+	with appropriate PIC test.
+	(rs6000_xcoff_select_section): Use decl_readonly_section_1 to
+	determine readonly.
+	(rs6000_binds_local_p): Combine PIC flags.
+	* sysv4.h (TARGET_SECTION_TYPE_FLAGS): Define.
+	* xcoff.h (TARGET_SECTION_TYPE_FLAGS): Define.
+
 2002-09-09  Per Bothner  <per@bothner.com>
 
 	* print-tree.c (print_node):  In a STRING_CST, escape non-ascii
