--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-10  Richard Earnshaw  <rearnsha@arm.com>
+
+	PR c/7873
+	* arm.md (insv): Use reg_or_int_operand for operand[3].
+
 2002-09-10  David Edelsohn  <edelsohn@gnu.org>
 
 	* rs6000.c (rs6000_assemble_visibility): Protect declaration
