fastjar.texi: New.
2002-09-10  Matthias Klose  <doko@debian.org>

        * fastjar.texi: New.
        * Makefile.am: Support building info docs and manpages.
        * Makefile.in: Regenerated.
        * configure.in: Set gcc_version.
        * configure: Regenerated.
        * jargrep.c: Update usage and help strings.

From-SVN: r57013

--- a/fastjar/ChangeLog
+++ b/fastjar/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-10  Matthias Klose  <doko@debian.org>
+
+	* fastjar.texi: New.
+	* Makefile.am: Support building info docs and manpages.
+	* Makefile.in: Regenerated.
+	* configure.in: Set gcc_version.
+	* configure: Regenerated.
+	* jargrep.c: Update usage and help strings.
+
 2002-09-09  Tom Tromey  <tromey@redhat.com>
 
 	* jartool.c (mkdir): Define.
