--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-11  Zack Weinberg  <zack@codesourcery.com>
+
+	* cplus-dem.c: Code code under #ifdef MAIN moved to gcc/cp/cxxfilt.c.
+	* testsuite/Makefile.in: Adjust for test-demangle.
+	* testsuite/regress-demangle: Deleted.
+	* testsuite/test-demangle.c: New file.
+	* testsuite/demangle-expected: Change \$ to $ throughout, now that
+	this file is not being read by a shell script.
+
 2002-09-05  Roger Sayle  <roger@eyesopen.com>
 
 	* regex.c: Only use "#pragma alloca" on AIX when not using gcc.
