Fix typo in last commit
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57038 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,6 +1,6 @@
 2002-09-11  Zack Weinberg  <zack@codesourcery.com>
 
-	* cplus-dem.c: Code code under #ifdef MAIN moved to gcc/cp/cxxfilt.c.
+	* cplus-dem.c: Code under #ifdef MAIN moved to gcc/cp/cxxfilt.c.
 	* testsuite/Makefile.in: Adjust for test-demangle.
 	* testsuite/regress-demangle: Deleted.
 	* testsuite/test-demangle.c: New file.
