--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-11  Janis Johnson  <janis187@us.ibm.com>
+
+	* doc/install.texi: Fix typos.
+
 2002-09-11  Zack Weinberg  <zack@codesourcery.com>
 
 	* Makefile.in: Remove all references to s-under and underscore.c.
