* splay-tree.c (splay_tree_successor): Fix comments.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57044 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-10  Mike Stump  <mrs@apple.com>
+
+	* splay-tree.c (splay_tree_successor): Fix comments.
+
 2002-09-11  Zack Weinberg  <zack@codesourcery.com>
 
 	* cplus-dem.c: Code under #ifdef MAIN moved to gcc/cp/cxxfilt.c.
