* print-tree.c (print_node): Print the restrict qualifier.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57045 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-11  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* print-tree.c (print_node): Print the restrict qualifier.
+
 2002-09-11  Janis Johnson  <janis187@us.ibm.com>
 
 	* doc/install.texi: Fix typos.
