* fold-const.c (make_range): Only narrow to signed range if         the signed range is smaller than the unsigned range.
	* gcc.c-torture/execute/20020911-1.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57050 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-11  Hartmut Penner  <hpenner@de.ibm.com>
+
+	* fold-const.c (make_range): Only narrow to signed range if
+	the signed range is smaller than the unsigned range.
+
 2002-09-12  Alan Modra  <amodra@bigpond.net.au>
 
 	* emit-rtl.c (set_mem_size): New function.
