--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -3080,6 +3080,20 @@
   [(set_attr "op_type"  "RRE,RXE")
    (set_attr "atype"    "reg,mem")])
 
+(define_insn "*adddi3_imm_cc"
+  [(set (reg 33) 
+        (compare (plus:DI (match_operand:DI 1 "nonimmediate_operand" "0")
+                          (match_operand:DI 2 "const_int_operand" "K"))
+                 (const_int 0)))
+   (set (match_operand:DI 0 "register_operand" "=d")
+        (plus:DI (match_dup 1) (match_dup 2)))]
+  "TARGET_64BIT	 
+   && s390_match_ccmode (insn, CCAmode) 
+   && CONST_OK_FOR_LETTER_P (INTVAL (operands[2]), 'K')"
+  "aghi\\t%0,%h2"
+  [(set_attr "op_type"  "RI")
+   (set_attr "atype"    "reg")])  
+
 (define_insn "*adddi3_cc"
   [(set (reg 33) 
         (compare (plus:DI (match_operand:DI 1 "nonimmediate_operand" "%0,0")
@@ -3209,6 +3223,19 @@
    [(set_attr "op_type"  "RX")
     (set_attr "atype"    "mem")
     (set_attr "type"     "la")])
+
+(define_insn "*addsi3_imm_cc"
+  [(set (reg 33) 
+        (compare (plus:SI (match_operand:SI 1 "nonimmediate_operand" "0")
+                          (match_operand:SI 2 "const_int_operand" "K"))
+                 (const_int 0)))
+   (set (match_operand:SI 0 "register_operand" "=d")
+        (plus:SI (match_dup 1) (match_dup 2)))]
+  "s390_match_ccmode (insn, CCAmode)
+   && CONST_OK_FOR_LETTER_P (INTVAL (operands[2]), 'K')"
+  "ahi\\t%0,%h2"
+  [(set_attr "op_type"  "RI")
+   (set_attr "atype"    "reg")])  
 
 (define_insn "*addsi3_carry1_cc"
   [(set (reg 33) 
@@ -5945,52 +5972,184 @@
 
 
 ;;
-;;- Subtract one and jump if not zero.
+;;- Loop instructions.
 ;;
+;;  This is all complicated by the fact that since this is a jump insn
+;;  we must handle our own output reloads.
+ 
+(define_expand "doloop_end"
+  [(use (match_operand 0 "" ""))        ; loop pseudo
+   (use (match_operand 1 "" ""))        ; iterations; zero if unknown
+   (use (match_operand 2 "" ""))        ; max iterations
+   (use (match_operand 3 "" ""))        ; loop level
+   (use (match_operand 4 "" ""))]       ; label
+  ""
+  "
+{
+  if (GET_MODE (operands[0]) == SImode)
+    emit_jump_insn (gen_doloop_si (operands[4], operands[0], operands[0]));
+  else if (GET_MODE (operands[0]) == DImode && TARGET_64BIT)
+    emit_jump_insn (gen_doloop_di (operands[4], operands[0], operands[0]));
+  else
+    FAIL;
 
-;(define_expand "decrement_and_branch_on_count"
-;  [(use (match_operand 0 "register_operand" ""))
-;   (use (label_ref (match_operand 1 "" "")))]
-;  ""
-;  "
-;{
-;/*  if (TARGET_64BIT)
-;    emit_jump_insn (gen_brctdi (operands[0], operands[1]));
-;  else */
-;    emit_jump_insn (gen_brctsi (operands[0], operands[1]));
-;  DONE;
-;}")
-;
-;(define_insn "brctsi"
-;  [(set (pc)
-;        (if_then_else
-;           (ne (match_operand:SI 0 "register_operand" "+a")
-;               (const_int 1))
-;           (label_ref (match_operand 1 "" ""))
-;           (pc)))
-;   (set (match_dup 0)
-;        (plus:SI (match_dup 0) (const_int -1)))]
-;  ""
-;  "brct\\t%0,%l1"
-;   [(set_attr "op_type" "RI")
-;    (set_attr "type"    "branch")]
-;)
-;
-;(define_insn "ibrctsi"
-;  [(set (pc)
-;        (if_then_else
-;          (eq (match_operand:SI 0 "register_operand" "+a")
-;              (const_int 1))
-;          (pc)
-;          (label_ref (match_operand 1 "" ""))))
-;   (set (match_dup 0)
-;        (plus:SI (match_dup 0) (const_int -1)))]
-;  ""
-;  "brct\\t%0,%l1"
-;   [(set_attr "op_type" "RI")
-;    (set_attr "type"    "branch")]
-;)
+  DONE;
+}")
 
+(define_insn "doloop_si"
+  [(set (pc)
+        (if_then_else
+          (ne (match_operand:SI 1 "register_operand" "d,d")
+              (const_int 1))
+          (label_ref (match_operand 0 "" ""))
+          (pc)))
+   (set (match_operand:SI 2 "register_operand" "=1,?*m*d")
+        (plus:SI (match_dup 1) (const_int -1)))
+   (clobber (match_scratch:SI 3 "=X,&d"))
+   (clobber (reg:CC 33))]
+  ""
+  "*
+{
+  if (which_alternative != 0)
+    return \"#\";
+  else if (get_attr_length (insn) == 4)
+    return \"brct\\t%1,%l0\";
+  else
+    abort ();
+}"
+  [(set_attr "op_type"  "RI")
+   (set (attr "length")
+        (cond [(lt (abs (minus (pc) (match_dup 0))) (const_int 60000))
+                (const_int 4)
+               (ne (symbol_ref "TARGET_64BIT") (const_int 0))
+                 (const_int 10)
+	       (ne (symbol_ref "s390_pool_overflow") (const_int 0))
+                 (if_then_else (eq (symbol_ref "flag_pic") (const_int 0))
+                               (const_int 12) (const_int 14))
+               (eq (symbol_ref "flag_pic") (const_int 0))
+                 (const_int 6)] (const_int 8)))])
+
+(define_insn "*doloop_si_long"
+  [(set (pc)
+        (if_then_else
+          (ne (match_operand:SI 1 "register_operand" "d,d")
+              (const_int 1))
+          (match_operand 0 "address_operand" "p,p")
+          (pc)))
+   (set (match_operand:SI 2 "register_operand" "=1,?*m*d")
+        (plus:SI (match_dup 1) (const_int -1)))
+   (clobber (match_scratch:SI 3 "=X,&d"))
+   (clobber (reg:CC 33))]
+  ""
+  "*
+{
+  if (get_attr_op_type (insn) == OP_TYPE_RR)
+    return \"bctr\\t%0\";
+  else
+    return \"bct\\t%a0\";
+}"
+  [(set (attr "op_type") 
+        (if_then_else (match_operand 0 "register_operand" "")
+                      (const_string "RR") (const_string "RX")))
+   (set_attr "atype" "mem")])
+
+(define_split
+  [(set (pc)
+        (if_then_else (ne (match_operand:SI 1 "register_operand" "")
+                          (const_int 1))
+                      (match_operand 0 "" "")
+                      (pc)))
+   (set (match_operand:SI 2 "nonimmediate_operand" "")
+        (plus:SI (match_dup 1) (const_int -1)))
+   (clobber (match_scratch:SI 3 ""))
+   (clobber (reg:CC 33))]
+  "reload_completed
+   && (! REG_P (operands[2])
+       || ! rtx_equal_p (operands[1], operands[2]))"
+  [(set (match_dup 3) (match_dup 1))
+   (parallel [(set (reg:CCAN 33)
+                   (compare:CCAN (plus:SI (match_dup 3) (const_int -1))
+                                 (const_int 0)))
+              (set (match_dup 3) (plus:SI (match_dup 3) (const_int -1)))])
+   (set (match_dup 2) (match_dup 3))
+   (set (pc) (if_then_else (ne (reg:CCAN 33) (const_int 0))
+                           (match_dup 0)
+                           (pc)))]
+  "")
+
+(define_insn "doloop_di"
+  [(set (pc)
+        (if_then_else
+          (ne (match_operand:DI 1 "register_operand" "d,d")
+              (const_int 1))
+          (label_ref (match_operand 0 "" ""))
+          (pc)))
+   (set (match_operand:DI 2 "register_operand" "=1,?*m*r")
+        (plus:DI (match_dup 1) (const_int -1)))
+   (clobber (match_scratch:DI 3 "=X,&d"))
+   (clobber (reg:CC 33))]
+  "TARGET_64BIT"
+  "*
+{
+  if (which_alternative != 0)
+    return \"#\";
+  else if (get_attr_length (insn) == 4)
+    return \"brctg\\t%1,%l0\";
+  else
+    abort ();
+}"
+  [(set_attr "op_type"  "RI")
+   (set (attr "length")
+        (if_then_else (lt (abs (minus (pc) (match_dup 0))) (const_int 60000))
+                      (const_int 4) (const_int 12)))])
+
+(define_insn "*doloop_di_long"
+  [(set (pc)
+        (if_then_else
+          (ne (match_operand:DI 1 "register_operand" "d,d")
+              (const_int 1))
+          (match_operand 0 "address_operand" "p,p")
+          (pc)))
+   (set (match_operand:DI 2 "register_operand" "=1,?*m*d")
+        (plus:DI (match_dup 1) (const_int -1)))
+   (clobber (match_scratch:DI 3 "=X,&d"))
+   (clobber (reg:CC 33))]
+  ""
+  "*
+{
+  if (get_attr_op_type (insn) == OP_TYPE_RRE)
+    return \"bctgr\\t%0\";
+  else
+    return \"bctg\\t%a0\";
+}"
+  [(set (attr "op_type") 
+        (if_then_else (match_operand 0 "register_operand" "")
+                      (const_string "RRE") (const_string "RXE")))
+   (set_attr "atype" "mem")])
+
+(define_split
+  [(set (pc)
+        (if_then_else (ne (match_operand:DI 1 "register_operand" "")
+                          (const_int 1))
+                      (match_operand 0 "" "")
+                      (pc)))
+   (set (match_operand:DI 2 "nonimmediate_operand" "")
+        (plus:DI (match_dup 1) (const_int -1)))
+   (clobber (match_scratch:DI 3 ""))
+   (clobber (reg:CC 33))]
+  "reload_completed
+   && (! REG_P (operands[2])
+       || ! rtx_equal_p (operands[1], operands[2]))"
+  [(set (match_dup 3) (match_dup 1))
+   (parallel [(set (reg:CCAN 33)
+                   (compare:CCAN (plus:DI (match_dup 3) (const_int -1))
+                                 (const_int 0)))
+              (set (match_dup 3) (plus:DI (match_dup 3) (const_int -1)))])
+   (set (match_dup 2) (match_dup 3))
+   (set (pc) (if_then_else (ne (reg:CCAN 33) (const_int 0))
+                           (match_dup 0)
+                           (pc)))]
+  "")
 
 ;;
 ;;- Unconditional jump instructions.
