--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/sparc/linux64.h (STARTFILE_SPEC32): Fix a typo.
+
 2002-09-12  Alan Modra  <amodra@bigpond.net.au>
 
 	* emit-rtl.c (set_mem_size): New function.
