--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-12  Jason Merrill  <jason@redhat.com>
+
+	* calls.c (store_one_arg): Use size_in_bytes to determine the
+	amount of space to push.
+
 2002-09-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/sparc/linux64.h (STARTFILE_SPEC32): Fix a typo.
